--- a/testscans.ipynb
+++ b/testscans.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Asylum_Research_AFM import Controls\n",
-    "from Asylum_Research_AFM import core"
+    "from Asylum_Research_AFM import Controls"
    ]
   },
   {
@@ -32,7 +31,7 @@
     }
    ],
    "source": [
-    "gridscan = Controls.scans.GridScan(num_x_grid_points = 60, num_y_grid_points = 60)"
+    "gridscan = Controls.scans.GridScan(num_x_grid_points=60, num_y_grid_points=60)"
    ]
   },
   {
@@ -53,9 +52,7 @@
      ]
     }
    ],
-   "source": [
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
