--- a/uploadtodatafed.ipynb
+++ b/uploadtodatafed.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datafed.CommandLib import API\n",
     "import os\n",
     "\n",
+    "from datafed.CommandLib import API\n",
     "from igorfilesend import DataFed_Log_In\n",
     "\n",
     "df_api = API()"
@@ -39,8 +39,8 @@
    "outputs": [],
    "source": [
     "def delete_datafed_key_files(directory):\n",
-    "    priv_key_file = os.path.join(directory, 'datafed-user-key.priv')\n",
-    "    pub_key_file = os.path.join(directory, 'datafed-user-key.pub')\n",
+    "    priv_key_file = os.path.join(directory, \"datafed-user-key.priv\")\n",
+    "    pub_key_file = os.path.join(directory, \"datafed-user-key.pub\")\n",
     "\n",
     "    if os.path.exists(priv_key_file):\n",
     "        os.remove(priv_key_file)\n",
@@ -66,7 +66,7 @@
     }
    ],
    "source": [
-    "directory_path = r'C:\\Users\\Asylum User\\.datafed'\n",
+    "directory_path = r\"C:\\Users\\Asylum User\\.datafed\"\n",
     "delete_datafed_key_files(directory_path)"
    ]
   }
